feat: Update styles and enhance ResumeCard component; add Wipe route for data management

--- a/app/app.css
+++ b/app/app.css
@@ -1,10 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Mona+Sans:ital,wght@0,200..900;1,200..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200..900&display=swap");
 @import "tailwindcss";
 @import "tw-animate-css";
 
 @theme {
   --font-sans:
-    "Mona Sans", ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
+    "Poppins", ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --color-dark-200: #475467;
   --color-light-blue-100: #c1d3f81a;
@@ -129,13 +129,14 @@ form {
   @apply bg-gradient-to-b from-light-blue-100 to-light-blue-200;
 }
 
+/* 💙 Warna primary agak kebiruan */
 @utility primary-gradient {
-  background: linear-gradient(to bottom, #8e98ff, #606beb);
-  box-shadow: 0px 74px 21px 0px #6678ef00;
+  background: linear-gradient(to bottom, #6fa7ff, #3f74e0);
+  box-shadow: 0px 74px 21px 0px #3f74e000;
 }
 
 @utility primary-gradient-hover {
-  background: linear-gradient(to bottom, #717dff, #4957eb);
+  background: linear-gradient(to bottom, #5f95f5, #3668dc);
 }
 
 @utility inset-shadow {
